<resources>
    <string name="app_name">Recip</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings_fragment">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_views">Most View</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_details">Details</string>


    <string name="search_hint">Search cheese</string>
    <string name="search_label">Search</string>


    <string name="about_us_text">Your Application reflects an identity of your business and its time to mark your identity! Discover Solutions
        is by your side in your journey towards becoming a proud business owner. Now a days there are plenty of brands available in same categories, Discover helps you to be unique from the others \n\n
        We value the trust yu put us to develop your application, and we safeguard that trust by going beyond what is expected;\n\n
        Delivering that little bit extra that makes all the difference. Discover team is as creative, diverse and colorful as the country it is based in.;
        Team Discover Solutions has plenty to offer and we would like to branch out to as many countries as we can\n\n
        Give us a call or just WhatsApp on +254707851734
        Send your requirements via email: recipweb@gmail.com \n\n\n\n
    </string>
    <string name="privacy_policy_text">

       Discover Solutions built the Recip app as an Ad Supported app. This SERVICE is provided by
       Discover Solutions at no cost and is intended for use as is.
       This page is used to inform visitors regarding our policies with the collection, use, and
       disclosure of Personal Information if anyone decided to use our Service.If you choose to use
       our Service, then you agree to the collection and use of information in relation to this
       policy. The Personal Information that we collect is used for providing and improving the
       Service. We will not use or share your information with anyone except as described in this
       Privacy Policy.The terms used in this Privacy Policy have the same meanings as in our Terms
       and Conditions, which is accessible at Recip unless otherwise defined in this Privacy Policy.
       \n\n

        <b>Information Collection and Use</b> \n\n
        For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Email Address,Phone number,Network,Names,Passwords . The information that we request will be retained by us and used as described in this privacy policy.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app\n\n

         <b>Log Data</b>\n\n
        We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

Google Play Services \n\n

         <b>Service Providers</b>\n\n
      We may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n\n
                 <b>Security</b>\n\n
        We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.\n\n
                         <b>Links to Other Services</b>\n\n
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\n
                         <b>Children’s Privacy</b>\n\n

These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.\n\n

                                 <b>Changes to This Privacy Policy</b>\n\n
        We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n\n

                                         <b>Contact Us</b>\n\n
If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at recipweb@gmail.com.\n\n


    </string>
    <string name="see_all">See All</string>
    <string name="find_label">What can we help you cook,\n </string>
    <string name="blog_into_tagline">Access a variety of articles on recipes \n from professionals around the world.</string>
    <string name="baked_cheese_manicotti">Baked Cheese \n Manicotti</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
