<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_folder_special_black_24dp"
            android:title="@string/menu_latest" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_views"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_views" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />
    </group>

</menu>
