<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.recip.ui.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_latest"
        android:name="com.recip.ui.fragments.latest.LatestFragment"
        android:label="@string/menu_latest"
        tools:layout="@layout/fragment_latest" />
    <fragment
        android:id="@+id/nav_categories"
        android:name="com.recip.ui.fragments.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/nav_views"
        android:name="com.recip.ui.fragments.mostviews.MostViewsFragment"
        android:label="@string/menu_views"
        tools:layout="@layout/fragment_most_views" />
    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.recip.ui.fragments.favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.recip.ui.fragments.settings.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>